2008-05-23  Mats Cronqvist  <masse@kreditor.se>

	* src/otp_doc.erl (handle_link): 
	
	added code for the case where you are looking for links and have
	several hits, but one is exact. e.g., when searching for
	gen_server:start/4, you probably want that and not
	gen_server:start_link/4.
	
2008-05-13  Mats Cronqvist  <masse@kreditor.se>

	* src/otp_doc.erl:
	* src/distel.erl:
	* elisp/erl-service.el:
	
	changed completion support (erl-complete) to try completions from
	the html docs first, and fall back to xref if that fails. old
	behaviour was to try xref only. not so great since;
	
	xref is annoyingly slow
	xref also completes internal exports (arguably a feature?)
	
	elisp functions to browse the docs;
	erl-find-doc
	erl-find-sig
	erl-find-sig-under-point
	erl-find-doc-under-point

2008-04-15  Mats Cronqvist  <masse@kreditor.se>

	* src/otp_doc.erl: 
	added modules/1 and functions/2
	fixed special case for the gen_server/gen_fsm callbacks

	* src/otp_doc.erl: 
	handled the special case of the "erlang" module.
	handling the F-A delimiter that changed between R11 and R12.

2008-04-10  Mats Cronqvist  <masse@kreditor.se>

	* elisp/erl-service.el: 
	added erl-find-module (prompt for module name and open erl file) 

	and 
	
	erl-find-sig-under-point (print function signature(s) in mini-buffer)
	e.g., doing erl-find-sig-under-point on "li:fl" will print this;
	
	lib:flush_receive() -> void()
	lists:flatlength(DeepList) -> int()
	lists:flatmap(Fun, List1) -> List2
	lists:flatten(DeepList, Tail) -> List
	lists:flatten(DeepList) -> List

2008-04-09  Mats Cronqvist  <masse@kreditor.se>

	* src/otp_doc.erl: 
	* src/distel.erl: 
	  in the process of adding document browsing to distel.
	currently, M-x erl-find-doc-under-point will pop a buffer and
	display the OTP html doc for the function under point.
	requires 'w3m' and 'w3m-el' to be installed.
	
2007-11-03  Bill Clementson  <billclem@gmail.com> 

	* elisp/derl.el (derl-string-make-unibyte,